--- a/cool-api/package.json
+++ b/cool-api/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "publishConfig": {
+    "@504knight:registry": "https://npm.pkg.github.com/"
+  }
 }
