--- a/.github/workflows/publish-cool-api.yml
+++ b/.github/workflows/publish-cool-api.yml
@@ -22,13 +22,13 @@ jobs:
           node-version: 20.x
           registry-url: https://npm.pkg.github.com/
           scope: "@504knight"
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
       - name: Debug current branch
         run: echo ${{github.ref}}
       - name: Debug version
         run: cat package.json
       - name: Publish package
         if: github.event.client_payload.skip_bump == 'false'
-        run: yarn publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
