--- a/.github/workflows/release-cool-api.yml
+++ b/.github/workflows/release-cool-api.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Check for changes in cool-api
         id: check_changes
         run: |
-          if git diff --quiet HEAD^ HEAD -- cool-api; then
+          if git diff HEAD^ HEAD -- cool-api; then
             echo "No changes in cool-api directory. Skipping version bump."
             echo "skip_bump=true" >> $GITHUB_OUTPUT
           else
