--- a/.github/workflows/release-cool-api.yml
+++ b/.github/workflows/release-cool-api.yml
@@ -8,6 +8,10 @@ on:
         - 'cool-api/**'
   workflow_dispatch: {}
 
+defaults:
+    run:
+      working-directory: cool-api
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,6 +38,7 @@ jobs:
       # Check if there are changes in cool-api directory
       - name: Check for changes in cool-api
         id: check_changes
+        working-directory: '.'
         run: |
           if git diff --quiet HEAD^ HEAD -- cool-api; then
             echo "No changes in cool-api directory. Skipping version bump."
